--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <h1><span>Dati?</span><br>Il tuo nuovo <br><span>modus</span> operandi!</h1>
         <p>
-            Trasformiamo le grandi organizzazioni pubbliche e private in data-driven, abilitando un nuovo modo di operare che sfruttando i dati come risorsa strategica.
+            Trasformiamo le grandi organizzazioni pubbliche e private in data-driven, abilitando un nuovo modo di operare che sfrutta i dati come risorsa strategica.
         </p>
 
 
